best-practices/require-drop-cap-net-raw/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-drop-cap-net-raw
policies:
- ../require-drop-cap-net-raw.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: drop-cap-net-raw
  resources:
  - badpod01
  - badpod02
  result: fail
  rule: require-drop-cap-net-raw
- kind: Pod
  policy: drop-cap-net-raw
  resources:
  - drop-good
  result: pass
  rule: require-drop-cap-net-raw
